{{$NEXT}}

    - Added support for QR codes.

    - [GH-44] The X coordinate returned by $text->position() or (deprecated)
      $text->textpos() was incorrect when read after being set twice (report by
      Johan Vromans).

    - [GH-45] Renamed transform's "relative" option to "repeat" and fixed the
      documentation describing what it does (report by Johan Vromans).

    - Minor doc clarifications and improved error messages.


2.043     2021-12-07

    - Restores backward compatibility (with a warning) when the deprecated
      $pdf->pageLabel is given an invalid -style option starting with "a" or
      "r" (report by Johan Vromans).

    - Fix incorrect default in documentation for annotation borders (report and
      patch by Johan Vromans).


2.042     2021-09-16

    - This release includes many changes to method names, options, and
      documentation aimed at improving approachability, but existing code should
      continue to work.  See the new Backward Compatibility section in the main
      PDF::API2 documentation for details about deprecation timelines and a
      suggested workflow for handling upgrades.  See the new Migration section
      for a consolidated list of deprecated methods/options and their
      replacements.

    - Renamed several methods in the PDF::API2 base class:

      - end -> close
      - open_scalar -> from_string
      - stringify -> to_string
      - pages -> page_count
      - importPageIntoForm -> embed_page
      - isEncrypted -> is_encrypted
      - xmpMetadata -> xml_metadata
      - outlines -> outline

    - Merged saveas into save.

    - Added individual accessors for PDF metadata (title, author, producer,
      etc.).  Replaced info and infoMetaAttributes with info_metadata for custom
      metadata.

    - Renamed the following methods in the PDF::API2::Page class:

      - gfx -> graphics
      - rotate -> rotation

    - Added $page->boundaries() and $pdf->default_page_boundaries() to replace